add second section

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,10 +1,40 @@
+/* Variables */
+:root {
+  --background: #efefec;
+}
+/* Reset */
+
+/* Base Styles */
+
+body {
+  background-color: var(--background);
+}
+
+/* Fonts */
+p,
+a {
+  font-size: 1.2em;
+}
+a {
+  font-family: "Nanum Gothic", sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto Slab", sans-serif;
+  line-height: 1.2em;
+}
+/* Mobile Styles */
 .carousel-item {
-  min-height: 523px;
+  min-height: 520px;
 }
 .carousel-item img {
   position: absolute;
   object-fit: cover;
   top: 0;
   left: 0;
-  min-height: 523px;
+  min-height: 520px;
 }
