--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -25,6 +25,10 @@ a {
   font-family: "Nanum Gothic", sans-serif;
 }
 
+h2 {
+  font-size: 1.5em;
+}
+
 h1,
 h2,
 h3,
@@ -35,30 +39,6 @@ h6 {
   line-height: 1.2em;
 }
 /* Mobile Styles */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: auto;
-}
-
-.grid a {
-  grid-column: 1/9;
-}
-
-.grid h5,
-.grid p {
-  display: none;
-}
-
-.grid a:hover img {
-  transition: 500ms;
-  opacity: 0;
-}
-
-.carousel-item {
-  min-height: 520px;
-}
-
 .carousel-item img {
   position: absolute;
   object-fit: cover;
@@ -67,14 +47,125 @@ h6 {
   min-height: 520px;
 }
 
-// Small devices (landscape phones, 576px and up)
+.carousel-item {
+  min-height: 520px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(14, 1fr);
+  grid-template-rows: min-content;
+  gap: 0px;
+}
+
+.grid a {
+  grid-column: 1/15;
+}
+
+.grid a:hover img {
+  transition: 500ms;
+  opacity: 0;
+}
+/* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { ... }
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  body {
+    font-size: 25px;
+  }
 
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
+  .grid a:nth-of-type(1) {
+    grid-row: 1;
+    grid-column: 1/10;
+  }
 
-// Extra large devices (large desktops, 1200px and up)
+  .grid a:nth-of-type(2) {
+    grid-row: 1;
+    grid-column: 10/15;
+  }
+
+  .grid a:nth-of-type(3) {
+    grid-row: 2;
+    grid-column: 1/5;
+  }
+
+  .grid a:nth-of-type(4) {
+    grid-row: 2;
+    grid-column: 5/11;
+  }
+
+  .grid a:nth-of-type(5) {
+    grid-row: 2;
+    grid-column: 11/15;
+  }
+
+  .grid a:nth-of-type(6) {
+    grid-row: 3;
+    grid-column: 1/6;
+  }
+
+  .grid a:nth-of-type(7) {
+    grid-row: 3;
+    grid-column: 6/15;
+  }
+
+  .grid a:nth-of-type(8) {
+    grid-row: 4;
+    grid-column: 1/7;
+  }
+
+  .grid a:nth-of-type(9) {
+    grid-row: 4;
+    grid-column: 7/15;
+  }
+
+  .grid a:nth-of-type(10) {
+    grid-row: 5;
+    grid-column: 1/6;
+  }
+
+  .grid a:nth-of-type(11) {
+    grid-row: 5;
+    grid-column: 6/15;
+  }
+
+  .grid a:nth-of-type(12) {
+    grid-row: 6;
+    grid-column: 1/6;
+  }
+
+  .grid a:nth-of-type(13) {
+    grid-row: 6;
+    grid-column: 6/10;
+  }
+
+  .grid a:nth-of-type(14) {
+    grid-row: 6;
+    grid-column: 10/15;
+  }
+
+  .grid a:nth-of-type(15) {
+    grid-row: 7;
+    grid-column: 1/7;
+  }
+
+  .grid a:nth-of-type(16) {
+    grid-row: 7;
+    grid-column: 7/15;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .carousel-item {
+    min-height: 683px;
+  }
+
+  .carousel-item img{
+    min-height: 683px;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { ... }
