--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,43 +1,3 @@
-/* Variables */
-:root {
-  --background: #efefec;
-}
-/* Reset */
-* {
-  margin: 0;
-  padding: 0;z
-  box-sizing: border-box;
-}
-/* Base Styles */
-body {
-  background-color: var(--background);
-  overflow-x: hidden;
-}
-
-/* Fonts */
-p,
-a {
-  font-size: 1.2em;
-  line-height: 1.25em;
-}
-
-a {
-  font-family: "Nanum Gothic", sans-serif;
-}
-
-h2 {
-  font-size: 1.5em;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Roboto Slab", sans-serif;
-  line-height: 1.2em;
-}
 /* Mobile Styles */
 .carousel-item img {
   position: absolute;
@@ -67,7 +27,9 @@ h6 {
   opacity: 0;
 }
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { ... }
+@media (min-width: 576px) {
+  ...;
+}
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
@@ -162,10 +124,12 @@ h6 {
     min-height: 683px;
   }
 
-  .carousel-item img{
+  .carousel-item img {
     min-height: 683px;
   }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { ... }
+@media (min-width: 1200px) {
+  ...;
+}
