--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -28,7 +28,6 @@
 }
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-  ...;
 }
 
 /* Medium devices (tablets, 768px and up) */
@@ -131,5 +130,8 @@
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  ...;
+  .custom-height {
+    height: 100%;
+    min-height: 621px;
+  }
 }
