--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -40,3 +40,10 @@ h6 {
   font-family: "Roboto Slab", sans-serif;
   line-height: 1.2em;
 }
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  body {
+    font-size: 25px;
+  }
+}
